# vacances_scolaires_fr

./: .aiexclude  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml  requirements-dev.txt
.github/workflows/: lint.yml  manual-release.yaml  type-check.yml  validate.yml
custom_components/vacances_scolaires/: CHANGELOG.md  README.md  __init__.py  api.py  binary_sensor.py  calendar.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py
custom_components/vacances_scolaires/translations/: fr.json
